added item class and objects

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <div class="player paddle" id="player-paddle"></div>
     <div class="computer paddle" id="computer-paddle"></div>
     <div id="ball"></div>
+    <img src="./resources/mushroom.png" alt="mushroom" id="mushroom">
+    <img src="./resources/mirror2.png" alt="mirror" id="mirror">
 </body>
 </html>
