added third item and responsive shooting angle

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <div id="ball"></div>
     <img src="./resources/mushroom.png" alt="mushroom" id="mushroom">
     <img src="./resources/mirror2.png" alt="mirror" id="mirror">
+    <img src="./resources/banana.png" alt="banana" id="banana">
 </body>
 </html>
