added difficulty options and 5point limit

--- a/index.html
+++ b/index.html
@@ -18,5 +18,16 @@
     <img src="./resources/mushroom.png" alt="mushroom" id="mushroom">
     <img src="./resources/mirror2.png" alt="mirror" id="mirror">
     <img src="./resources/banana.png" alt="banana" id="banana">
+    <div id="welcome">
+        <h2 id="welcome-header">Welcome to Super Pong!</h2>
+        <h2 id="win-header">Congrats, you win!</h2>
+        <h2 id="lose-header">You lost :( but try again!</h2>
+        <h4 id="difficulty-header">Choose your difficulty:</h4>
+        <ul>
+            <li id="easy">Easy</li>
+            <li id="medium">Medium</li>
+            <li id="hard">Hard</li>
+        </ul>
+    </div>
 </body>
 </html>
