--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pongz</title>
+    <title>Super Pong</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" type="image/x-icon" href="/resources/pong_icon.png">
     <script src="./script.js" type="module"></script>
 </head>
 <body>
