--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Pong</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./mediaqueries.css">
     <link rel="icon" type="image/x-icon" href="/resources/pong_icon.png">
     <script src="./script.js" type="module"></script>
 </head>
