--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="ball"></div>
     <img src="./resources/mushroom.png" alt="mushroom" id="mushroom">
     <img src="./resources/mirror2.png" alt="mirror" id="mirror">
-    <img src="./resources/banana.png" alt="banana" id="banana">
+    <img src="./resources/tornado.png" alt="tornado" id="banana">
     <div id="welcome">
         <h2 id="welcome-header">Welcome to Super Pong!</h2>
         <h2 id="win-header">Congrats, you win!</h2>
